force-app/main/default/objects/Opportunity/fields/tijdstip_aanvang__c.field-meta.xml
<CustomField>
    <fullName>tijdstip_aanvang__c</fullName>
    <label>tijdstip_aanvang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>