force-app/main/default/objects/Opportunity/fields/tijdstip_gewijzigd__c.field-meta.xml
<CustomField>
    <fullName>tijdstip_gewijzigd__c</fullName>
    <label>tijdstip_gewijzigd</label>
    <type>DateTime</type>
</CustomField>