force-app/main/default/objects/Opportunity/fields/Without_CV__c.field-meta.xml
<CustomField>
    <fullName>Without_CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Without CV</label>
    <type>Checkbox</type>
</CustomField>