force-app/main/default/objects/Opportunity/fields/Work_Flexible__c.field-meta.xml
<CustomField>
    <fullName>Work_Flexible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Flexible</label>
    <type>Checkbox</type>
</CustomField>