force-app/main/default/objects/Opportunity/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>