force-app/main/default/objects/Opportunity/fields/Working_Method__c.field-meta.xml
<CustomField>
    <fullName>Working_Method__c</fullName>
    <label>Working Method</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>