force-app/main/default/objects/Opportunity/fields/write_ad__c.field-meta.xml
<CustomField>
    <fullName>write_ad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>write_ad</label>
    <type>Checkbox</type>
</CustomField>