force-app/main/default/objects/Opportunity/recordTypes/Freelance.recordType-meta.xml
<RecordType>
    <fullName>Freelance</fullName>
    <active>true</active>
    <businessProcess>Freelance</businessProcess>
    <label>Freelance</label>
</RecordType>