force-app/main/default/objects/Opportunity/listViews/Live_Jobs.listView-meta.xml
<ListView>
    <fullName>Live_Jobs</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Job_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Job_Type__c</field>
        <operation>equals</operation>
        <value>Content</value>
    </filters>
    <filters>
        <field>Publish__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Online Jobs</label>
</ListView>